<resources>
    <string name="app_name">Running</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="social">Social</string>
    <string name="start_running">Start Running</string>
    <string name="my_friends">My Friends</string>
    <string name="challenges">Challenges</string>
    <string name="statistics">Statistics</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="plans">Plans</string>
    <string name="others">Others</string>
</resources>
